--- a/spaceBar/composer.json
+++ b/spaceBar/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-iconv": "*",
         "knplabs/knp-markdown-bundle": "^1.7",
+        "knpuniversity/lorem-ipsum-ibrah-bundle": "*@dev",
         "nexylan/slack-bundle": "^2.0",
         "php-http/guzzle6-adapter": "^1.1",
         "sensio/framework-extra-bundle": "^5.1",
@@ -36,7 +37,6 @@
     },
     "autoload": {
         "psr-4": {
-            "KnpU\\LoremIpsumBundle\\": "lib/LoremIpsumBundle/src/",
             "App\\": "src/"
         }
     },
@@ -72,5 +72,15 @@
             "id": "01C1TW989CK77ZA7B2H4HC9WAG",
             "allow-contrib": false
         }
-    }
+    },
+
+    "repositories": [
+        {
+            "type": "path",
+            "url": "/var/www/LoremIpsumIbrahBundle",
+            "options": {
+                "symlink": true
+            }
+        }
+    ]
 }
